change code and push to see if overflow issue during search is fixed

--- a/public/cards.css
+++ b/public/cards.css
@@ -145,6 +145,7 @@ a:hover {
     place-items: center;
     padding: 0 clamp(1rem, 5%, 5rem);
     margin-top: 2rem;
+    overflow: hidden;
 }
 
 @media (max-width: 900px) {
